--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e5e5e5;
+  background-color: #c0bdb5;
   color: black;
   font-family: 'Lexend Exa', sans-serif;
   overflow: auto;
@@ -57,12 +57,6 @@ body {
   margin: -2px;
   padding: 2px;
   clip-path: inset(2px round 15px);
-}
-.overlay-link {
-  position: absolute;
-  width: 240px;
-  height: 240px;
-  z-index: 10;
 }
 #compiler-status-bar {
   text-decoration: none;
